# ACBC_open_source

./: .dockerignore  .gitignore  Dockerfile  EXPLANATION.md  README.md  deploy.sh  docker-compose.yml  main.py  nginx.conf  pull_data.py  pyproject.toml
acbc/: analysis.py  engine.py  models.py
configs/: AGENTS.md  demo_laptop.yaml  development.yaml
data/raw/: P001_20260226T085639Z.json  P002_20260226T092247Z.json  P003_20260226T094249Z.json  P004_20260226T094747Z.json  P005_20260226T100938Z.json
gamble_task/: trial_generation.py
scripts/: pull_data.py
web/: app.py
web/static/: style.css
web/templates/: base.html  byo.html  choice.html  complete.html  screening.html  welcome.html
