[project]
name = "pilot-acbc-ddm"
version = "0.1.0"
description = "Open-source Adaptive Choice-Based Conjoint (ACBC) analysis engine with CLI interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pandas>=3.0.1",
]

[project.scripts]
acbc = "main:main"
